// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number row should match snapshot for component suffix 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <View
      style={{}}
    >
      <Text
        style={
          [
            {},
            [
              [
                {},
                undefined,
              ],
              {},
            ],
          ]
        }
        testID="foo_test_label"
      >
        foo
      </Text>
    </View>
  </View>
  <View
    style={{}}
  >
    <View>
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              undefined,
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {},
                [
                  [
                    {},
                    undefined,
                    undefined,
                  ],
                  {},
                ],
              ]
            }
            testID="foo_test"
          >
            100
          </Text>
        </Text>
      </View>
    </View>
    <Text>
      $
    </Text>
    <View
      style={{}}
    />
  </View>
</View>
`;

exports[`Number row should match snapshot for text suffix 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <View
      style={{}}
    >
      <Text
        style={
          [
            {},
            [
              [
                {},
                undefined,
              ],
              {},
            ],
          ]
        }
        testID="foo_test_label"
      >
        foo
      </Text>
    </View>
  </View>
  <View
    style={{}}
  >
    <View>
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              undefined,
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {},
                [
                  [
                    {},
                    undefined,
                    undefined,
                  ],
                  {},
                ],
              ]
            }
            testID="foo_test"
          >
            100
          </Text>
          <Text>
             
          </Text>
          <Text
            style={
              [
                {},
                [
                  [
                    {},
                    undefined,
                    undefined,
                  ],
                  {},
                ],
              ]
            }
            testID="foo_test_suffix"
          >
            $
          </Text>
        </Text>
      </View>
    </View>
    <View
      style={{}}
    />
  </View>
</View>
`;
